{
    "name": "Player",
    "maps": [
        {
            "name": "New action map",
            "id": "516ea771-7d46-42d7-9302-c3388ac296d7",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "cca0e3c3-5f2d-4d77-8ee4-8c8b4f361dbb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseRightHand",
                    "type": "Button",
                    "id": "ae8a396a-704f-42a9-af70-46560fd60305",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "UseLeftHand",
                    "type": "Button",
                    "id": "242c0c08-a377-4360-a00c-aa6f7ca3a2d0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DropItem",
                    "type": "Button",
                    "id": "1f63e272-2a8d-49e7-8949-82d04e05d6f3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchFiremode",
                    "type": "Button",
                    "id": "4dcaeefa-8ab0-48fd-834a-95f378b303ab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9fb4555b-d37e-4af5-aa8b-4c751d9f5bbb",
                    "path": "<Keyboard>/#(E)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5413f51c-a075-44e4-a9b8-316fb6dc569f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseRightHand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "81325c90-0748-4ae5-9125-5effbd5c637b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseLeftHand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dcbdaf7c-775b-4563-83ae-f6dc0bccae7a",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DropItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cfda12dc-51af-4ce7-9442-1e4ad2a38d5d",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchFiremode",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}